--- a/react-auth-master/package.json
+++ b/react-auth-master/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "coc",
+  "name": "react-auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.12",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "realm-web": "^1.5.1",
-    "web-vitals": "^2.1.4"
+    "@react-google-maps/api": "^2.7.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
+    "framer-motion": "4.1.17",
+    "bootstrap": "^4.5.3",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-icons": "^4.3.1",
+    "react-to-print": "^2.13.0",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
