--- a/react-auth-master/package.json
+++ b/react-auth-master/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.6",
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@progress/kendo-react-popup": "^5.12.0",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "@progress/kendo-react-popup":"^5.12.0",
     "axios": "^0.21.1",
-    "framer-motion": "4.1.17",
     "bootstrap": "^4.5.3",
+    "framer-motion": "4.1.17",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.0",
     "react-scripts": "4.0.0",
-    "react-icons": "^4.3.1",
     "react-to-print": "^2.13.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
